--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h1>Repositório de Imagens</h1>
         <p>Aqui você encontra imagens otimizadas para campanhas de e-mail. Navegue e utilize as melhores opções para suas campanhas!</p>
         <div class="image-grid">
-            <img src="https://via.placeholder.com/150" alt="Imagem 1">
+            <img src="https://EdiRC12.github.io/mailasset/1%20(1).jpg" alt="Imagem 1">
             <img src="https://via.placeholder.com/150" alt="Imagem 2">
             <img src="https://via.placeholder.com/150" alt="Imagem 3">
             <img src="https://via.placeholder.com/150" alt="Imagem 4">
