--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
         }
         .container {
-            max-width: 800px;
+            max-width: 1200px;
             margin: 50px auto;
             background: white;
             padding: 20px;
@@ -28,18 +28,19 @@
         }
         .image-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 15px;
             margin-top: 20px;
         }
         .image-grid img {
             width: 100%;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s, box-shadow 0.3s;
         }
         .image-grid img:hover {
             transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
         }
     </style>
 </head>
@@ -48,10 +49,18 @@
         <h1>Repositório de Imagens</h1>
         <p>Aqui você encontra imagens otimizadas para campanhas de e-mail. Navegue e utilize as melhores opções para suas campanhas!</p>
         <div class="image-grid">
-            <img src="https://EdiRC12.github.io/mailasset/1%20(1).jpg" alt="Imagem 1">
-            <img src="https://via.placeholder.com/150" alt="Imagem 2">
-            <img src="https://via.placeholder.com/150" alt="Imagem 3">
-            <img src="https://via.placeholder.com/150" alt="Imagem 4">
+            <img src="https://edirc12.github.io/mailasset/1%20(1).jpg" alt="Imagem 1">
+            <img src="https://edirc12.github.io/mailasset/1%20(2).jpg" alt="Imagem 2">
+            <img src="https://edirc12.github.io/mailasset/1%20(3).jpg" alt="Imagem 3">
+            <img src="https://edirc12.github.io/mailasset/1%20(4).jpg" alt="Imagem 4">
+            <img src="https://edirc12.github.io/mailasset/1%20(5).jpg" alt="Imagem 5">
+            <img src="https://edirc12.github.io/mailasset/1%20(6).jpg" alt="Imagem 6">
+            <img src="https://edirc12.github.io/mailasset/1%20(7).jpg" alt="Imagem 7">
+            <img src="https://edirc12.github.io/mailasset/1%20(8).jpg" alt="Imagem 8">
+            <img src="https://edirc12.github.io/mailasset/1%20(9).jpg" alt="Imagem 9">
+            <img src="https://edirc12.github.io/mailasset/1%20(10).jpg" alt="Imagem 10">
+            <img src="https://edirc12.github.io/mailasset/1%20(11).jpg" alt="Imagem 11">
+            <img src="https://edirc12.github.io/mailasset/1%20(12).jpg" alt="Imagem 12">
         </div>
     </div>
 </body>
